add likes swagger logic
