# app/Http/Resources/Api/V1/Comment/CommentResource.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Resources\Api\V1\Comment;
 
+use App\Http\Resources\Api\V1\Like\LikeResource;
 use App\Http\Resources\Api\V1\Post\PostResource;
 use App\Http\Resources\Api\V1\User\UserResource;
 use Illuminate\Http\Request;
@@ -23,6 +24,7 @@ class CommentResource extends JsonResource
             'post' => new PostResource($this->whenLoaded('post')),
             'parent' => new CommentResource($this->whenLoaded('parent')),
             'children' => CommentResource::collection($this->whenLoaded('children')),
+            'likes' => LikeResource::collection($this->whenLoaded('likes')),
             'created_at' => $this->resource->created_at,
             'updated_at' => $this->resource->updated_at,
         ];
